# Diabolika

./: .gitignore  CMakeLists.txt  Diabolika.sln  Diabolika.vcxproj  LICENSE.Zlib.txt  Project.vcxproj  README.md  launch.vs.json  main.json
.github/workflows/: deploy.yml  deploy_linux.yml  deploy_windows.yml  main.yml  package_gamefiles.yml
gamefilesdia/: main.json
gamefilesdia/bgm/: bgm.json  main.mid
gamefilesdia/gfx/: font.txt
gamefilesdia/gfx2x/: font.txt
gamefilesdia/level/: actions.json  baseLevel.json  defaultBoardTiles.txt  defaultLevelOptions.json  highScores.json  highScoresTemplate.json  unitClasses.json
gamefilesdia/res/: actions.json  fonts.json  textures.json  textures1x.json  textures2x.json  updateSettings.json
gamefilesdia/ui/: credits.json  gameOver.json  gameOverHighScore.json  mainMenu.json  play.json  playUI.json  playUIInputEvents.json  scores.json  scoresPanel.json  settings.json
gamefilesdia/ui/help/: help1.json  help1.txt  help2.json  help2.txt  help3-1.txt  help3-2.txt  help3-3.txt  help3-4.txt  help3.json  help4-1.txt  help4-2.txt  help4-3.txt  help4.json  help5-1.txt  help5-2.txt  help5.json  helpPanel.json
gamefilesdia2/: main.json
gamefilesdia2/bgm/: bgm.json
gamefilesdia2/level/: actions.json  baseLevel.json  defaultLevelOptions.json  highScores.json  highScoresTemplate.json  load.json  unitClasses.json
gamefilesdia2/res/: actions.json  fonts.json  textures.json  textures1x.json  textures1x_bmp.json  textures1x_png.json  textures2x.json  updateSettings.json
gamefilesdia2/ui/: credits.json  credits.txt  dataMissing.json  gameInputEvents.json  gameOver.json  gameOver.txt  gameOverHighScore.json  gameOverHighScore.txt  mainMenu.json  mainMenu2.json  mainMenuInputEvents.json  play.json  playUI.json  scores.json  scoresPanel.json  settings.json
gamefilesdia2/ui/help/: help1.json  help1.txt  help2.json  help2.txt  help3.json  help3.txt  help4-1.txt  help4-2.txt  help4.json  help5-1.txt  help5-2.txt  help5.json  help5.txt  help6-1.txt  help6-2.txt  help6-3.txt  help6.json  help6.txt  help7-1.txt  help7-2.txt  help7-3.txt  help7.json  help7.txt  help8.json  help8.txt  helpPanel.json
gamefilesdiaex/: main.json
gamefilesdiaex/level/: actions2.json  defaultLevelOptions.json  unitClasses.json
gamefilesdiaex/ui/: credits.json  gameInputEvents.json  mainMenu.json  mainMenu2.json  mainMenuInputEvents.json  play.json  playSaved.json  playUIInputEvents.json
gamefilesdiaex/ui/help/: help8.json  help8.txt
pkg/: upscale_images.sh
pkg/linux/: diabolika.desktop
src/: GameUtils2.cpp  GameUtils2.h  GameUtilsGame.cpp  Image.cpp  Image.h  Main.cpp  RegisterHooks.cpp
src/Actions/: ActLevel.h
src/Game/: Level.cpp  Level.h  Unit.cpp  Unit.h  UnitClass.cpp  UnitClass.h
src/Game/Actions/: ActLevel.h
src/Game/Level/: Level.cpp  Level.h  LevelBoard.cpp  LevelBoard.h  LevelCell.h  LevelDraw.cpp  LevelDraw.h  LevelOptions.cpp  LevelOptions.h  LevelOptionsManager.cpp  LevelOptionsManager.h  LevelSave.cpp  LevelSave.h  LevelSaveObject.h  LevelScore.h  LevelScoreManager.cpp  LevelState.h  LevelStateObject.h  LevelStats.cpp  LevelStats.h  LevelUIObject.cpp  LevelUIObject.h  LevelUnitManager.cpp  LevelUnitManager.h  LevelUnitQueue.h
src/Game/Properties/: UnitLink.h
src/Game/Save/: SaveLevel.cpp
src/Game/Unit/: Unit.cpp  Unit.h  UnitClass.h
src/Game/Utils/: GameUtils2.cpp  GameUtils2.h
src/Parser/: ParseAction2.cpp  ParseActionGame.cpp  ParseFile2.cpp  ParseFileGame.cpp  ParseLevel.cpp  ParseUnit.cpp  ParseUnitClass.cpp  ParseUnitClass.h
src/Parser/Actions/: ParseLevelActions.cpp  ParseLevelActions.h
src/Parser/Game/: ParseLevel.cpp  ParseUnit.cpp  ParseUnitClass.cpp
src/Parser/Level/: ParseLevel.cpp  ParseLevelOptions.cpp  ParseLevelSave.cpp  ParseLevelScores.cpp
src/Parser/Unit/: ParseUnit.cpp  ParseUnit.h  ParseUnitClass.cpp
src/Parser/Utils/: ParseUtilsGame.h  ParseUtilsGameKey.cpp  ParseUtilsGameKey.h
src/SFML/: CompositeSprite.cpp  CompositeSprite.h
